# ChangeLog for dev-php5/ZendFramework
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-php5/ZendFramework/Attic/ChangeLog,v 1.6 2006/06/06 18:45:50 sebastian Exp $

  06 Jun 2006; Sebastian Bergmann <sebastian@gentoo.org>
  ZendFramework-0.1.3.ebuild:
  Use doc and examples USE flags, implements RFE 135800. Patch by Bjarke
  Istrup Pedersen <gurligebis@gentoo.org>.

  06 Jun 2006; Sebastian Bergmann <sebastian@gentoo.org>
  -ZendFramework-0.1.2.ebuild:
  Remove old version.

  28 Apr 2006; Sebastian Bergmann <sebastian@gentoo.org>
  ZendFramework-0.1.2.ebuild, ZendFramework-0.1.3.ebuild:
  LICENSE="ZendFramework" -> LICENSE="ZendFramework-1.0"

*ZendFramework-0.1.3 (19 Apr 2006)

  19 Apr 2006; Sebastian Bergmann <sebastian@gentoo.org>
  +ZendFramework-0.1.3.ebuild:
  Version bump.

*ZendFramework-0.1.2 (08 Mar 2006)

  08 Mar 2006; Sebastian Bergmann <sebastian@gentoo.org>
  -ZendFramework-0.1.1.ebuild, +ZendFramework-0.1.2.ebuild:
  Version bump.

*ZendFramework-0.1.1 (04 Mar 2006)

  04 Mar 2006; Sebastian Bergmann <sebastian@gentoo.org> +metadata.xml,
  +ZendFramework-0.1.1.ebuild:
  Initial ebuild.
