@@ -2,14 +2,19 @@
 Hash: SHA1
 
 DIST ZendFramework-0.1.3.tar.gz 1538204 RMD160 e37b70e4b9b46a6c0a483896e9520888ad93558e SHA256 4f5f4e473f39b68ffdedfba2ac30301ba60edb6b30567497fe3e4fe47e23a73f
+DIST ZendFramework-0.1.4.tar.gz 3060321 RMD160 568bab6ce7556fc2f86b6dd74e043c9d70f49a48 SHA1 52a9472af13181d156ef4d919c42fabe24a222e1 SHA256 3b5abd7a53cc69cfabd104b17a75a7c0919b018f27ace20c24178c5dfc3681af
 EBUILD ZendFramework-0.1.3.ebuild 1033 RMD160 853d06e635ae8a74afbd5d0598d6a3c2f34ae77d SHA1 33fa31f9b55fdaed05c56c0d0dfb7bad85b412ee SHA256 8facdae7f6694c35e3be458a369d580d1e85047e9fda600b0ababe64f8e6ecec
 MD5 6bf6306f794722674af576bead79f917 ZendFramework-0.1.3.ebuild 1033
 RMD160 853d06e635ae8a74afbd5d0598d6a3c2f34ae77d ZendFramework-0.1.3.ebuild 1033
 SHA256 8facdae7f6694c35e3be458a369d580d1e85047e9fda600b0ababe64f8e6ecec ZendFramework-0.1.3.ebuild 1033
-MISC ChangeLog 1177 RMD160 f0be771122681de284adaeddd59f37e586b26580 SHA1 8b2bf9f67761e915ca916b643cce743075716f02 SHA256 c0bb33a7cd1bd1d604d84664b7fff097fd5a5b018439467170b9e6a89d5bc298
-MD5 058a72efcb188f4389f9630260ab485c ChangeLog 1177
-RMD160 f0be771122681de284adaeddd59f37e586b26580 ChangeLog 1177
-SHA256 c0bb33a7cd1bd1d604d84664b7fff097fd5a5b018439467170b9e6a89d5bc298 ChangeLog 1177
+EBUILD ZendFramework-0.1.4.ebuild 1033 RMD160 546a88dedaad5c9162d43c0eab84a902a8490441 SHA1 5df1d3879a9a264b57f553da40687d241aa9acfc SHA256 1802229563805d50ec4cddd69d8d9cb4b5aed9c1848683b88399d0193b81a88c
+MD5 c4497e418c1b08393b4fec4a091072d1 ZendFramework-0.1.4.ebuild 1033
+RMD160 546a88dedaad5c9162d43c0eab84a902a8490441 ZendFramework-0.1.4.ebuild 1033
+SHA256 1802229563805d50ec4cddd69d8d9cb4b5aed9c1848683b88399d0193b81a88c ZendFramework-0.1.4.ebuild 1033
+MISC ChangeLog 1318 RMD160 1a3b8fac8217e20381f953aa908bbbc90afbf432 SHA1 0e12f1adbe9dd10d913876b61700204eeeb31b05 SHA256 b1143745b7a9f08a0300d581fefa40f6dab65e27ed76f673d40bafdd8eaf4021
+MD5 b9827de82782e79d56b90d55164aa802 ChangeLog 1318
+RMD160 1a3b8fac8217e20381f953aa908bbbc90afbf432 ChangeLog 1318
+SHA256 b1143745b7a9f08a0300d581fefa40f6dab65e27ed76f673d40bafdd8eaf4021 ChangeLog 1318
 MISC metadata.xml 156 RMD160 a3a59cdc3ac33d711123b2d7e2b1deb2984aa101 SHA1 1f452f476317b4634c684eabfd8840d06d35b414 SHA256 f6d70434415ff7294f2a64e7870f32318c5fab9153fe63a58841b12d897da6ba
 MD5 34b376f52ca199fffb4e52b83169574a metadata.xml 156
 RMD160 a3a59cdc3ac33d711123b2d7e2b1deb2984aa101 metadata.xml 156
@@ -17,10 +22,13 @@ SHA256 f6d70434415ff7294f2a64e7870f32318c5fab9153fe63a58841b12d897da6ba metadata
 MD5 277b4780e315f7c01a0ea4cad9711de1 files/digest-ZendFramework-0.1.3 262
 RMD160 ddb134483ede0e3f366ec4f75b8113c6ee08b21f files/digest-ZendFramework-0.1.3 262
 SHA256 9ac844b3d400da6d7dc52fe1f25bba77f4cee8e1260ec67172c8d6cabefcbc8b files/digest-ZendFramework-0.1.3 262
+MD5 0e1ae327cb34be660c4c90ce9e53458f files/digest-ZendFramework-0.1.4 262
+RMD160 dd198621e65b8e38027d5f54bbc1912d83155232 files/digest-ZendFramework-0.1.4 262
+SHA256 cfdc7a1cb07b3e1c284cf6712c5df217cc1c2fdee3a3fa1eec2dd6cd2a4822f6 files/digest-ZendFramework-0.1.4 262
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v1.4.3 (GNU/Linux)
+Version: GnuPG v1.4.4 (GNU/Linux)
 
-iD8DBQFEhc1laGfFFLhbXWkRAh7tAJ0cTFqHabltgGSHeatykbnH60MPXwCdHwwU
-8WqGhexJWQWITt+kFBaoS5k=
-=NIq0
+iD8DBQFEpYhaaGfFFLhbXWkRAs0pAJ0aF/xMJ79nSld2crOv2UfY314vUgCeMFEg
+3jLCYlOEZhGWjsQS6HEROsY=
+=ICy6
 -----END PGP SIGNATURE-----
