@@ -1,0 +1,3 @@
+MD5 d56b269ad6c009d5e5628827998d136a ZendFramework-0.1.4.tar.gz 3060321
+RMD160 568bab6ce7556fc2f86b6dd74e043c9d70f49a48 ZendFramework-0.1.4.tar.gz 3060321
+SHA256 3b5abd7a53cc69cfabd104b17a75a7c0919b018f27ace20c24178c5dfc3681af ZendFramework-0.1.4.tar.gz 3060321
