@@ -1,6 +1,12 @@
 # ChangeLog for dev-php5/ZendFramework
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-php5/ZendFramework/Attic/ChangeLog,v 1.6 2006/06/06 18:45:50 sebastian Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-php5/ZendFramework/Attic/ChangeLog,v 1.7 2006/06/30 20:22:55 sebastian Exp $
+
+*ZendFramework-0.1.4 (30 Jun 2006)
+
+  30 Jun 2006; Sebastian Bergmann <sebastian@gentoo.org>
+  +ZendFramework-0.1.4.ebuild:
+  Version bump.
 
   06 Jun 2006; Sebastian Bergmann <sebastian@gentoo.org>
   ZendFramework-0.1.3.ebuild:
